# transformer-from-scratch-lab

./: .env.example  .gitignore  README.md  pyproject.toml  学习入口.md  开发协作.md
autograder/: README.md
course-manifests/: week-01.yaml
course-manifests/rubrics/: week-01.yaml
docs/: agent-decision-contract.md  course-design.md  course-operating-system.md  exploration-lane-design.md  problem-set-pdf-design.md  runtime-foundation.md  week-01-micro-lab-design.md  week-module-contract.md  weekly-module-template.md
homework/: week-00-concepts.md  week-00-engineering.md
homework_answer/week-00/: learning-record.md
homework_answer/week-01/: gate-00.md
lab/: README.md  __init__.py  run_grade.py
lab/src/: __init__.py  attention.py
lab/tests/: test_smoke.py
labs/week-00/: README.md  __init__.py  run_grade.py
labs/week-01/: README.md  run_grade.py  run_micro.py
learning_runtime/: __init__.py  cli.py  coordinator.py  env.py  manifest.py  policies.py  runtime.py  schemas.py  state_machine.py
learning_runtime/agent/: __init__.py  commands.py  models.py  presenter.py  protocol.py  session.py  siliconflow.py
learning_runtime/storage/: __init__.py  event_ledger.py  (+1 more)
notes/: week-00-matrix-foundations.md  week-00-template.md
pdf/: course-preamble.tex
problem-sets/: week-00-problem-set.md  week-00-problem-set.tex  week-01-problem-set.tex
resources/: week-00.md  week-00.tex  week-01.tex
scripts/: build_course_pdfs.py  build_week_00_problem_set.py  course_pdf_targets.py  verify_course_pdfs.py
solutions/: week-00-solutions.tex
tasks/: week-00.md  week-01.md
(+90 files in other folders)
