[project]
name = "transformer-from-scratch-lab"
version = "0.1.0"
description = "Theory-first, autograded Transformer learning lab."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["numpy>=2.2.0", "openai>=1.0", "pyyaml>=6.0"]

[project.scripts]
learning-os = "learning_runtime.cli:main"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["learning_runtime*"]

[tool.pytest.ini_options]
testpaths = ["labs", "tests"]
pythonpath = ["."]
markers = ["live: requires an external provider credential and network"]
